--- a/src/App.css
+++ b/src/App.css
@@ -11,12 +11,20 @@
   justify-content: space-around;
   align-items: center;
   height: 80vh;
+  border: 1px solid wheat;
+  border-radius: 10px;
+}
+
+#head{
+  align-self: flex-start;
 }
 
 #result{
   display: flex;
   align-items: center;
   margin-top: 40px;
+  height: 10%;
+
 }
 
 #strength-indicator{
