--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 #root {
+  width: 750px;
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -8,7 +9,7 @@
 #main{
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: flex-start;
   align-items: center;
   height: 80vh;
   border: 1px solid wheat;
@@ -16,7 +17,7 @@
 }
 
 #head{
-  align-self: flex-start;
+  margin: 20px;
 }
 
 #result{
@@ -24,7 +25,7 @@
   align-items: center;
   margin-top: 40px;
   height: 10%;
-
+  margin: 80px 0;
 }
 
 #strength-indicator{
@@ -32,4 +33,16 @@
   height: 15px;
   display: inline-block;
   margin: 0 10px;
+}
+
+#suggestions{
+  padding: 0 20px;
+  border: 1px solid wheat;
+  border-radius: 10px;
+  height: 180px;
+  transform: translateY(20px);
+}
+
+li{
+  font-size: 0.8rem;
 }
